--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -336,8 +336,12 @@
       href: Contributing/AllowingforLongerPathandFileNames.md
     - name: Build System
       href: Contributing/BuildSystemDocumentationIndex.md
+    - name: Build Workflows
+      href: Contributing/BuildWorkflowIndex.md
     - name: Contributing Guidelines
       href: Contributing/ContributingGuidelines.md
+    - name: Dependabot Configuration
+      href: Contributing/Build System/DependabotConfiguration.md
     - name: Enable Preview SDKs
       href: Contributing/EnablePreviewSDK.md
     - name: GitHub Actions Workflows
@@ -350,6 +354,8 @@
       href: Contributing/HowtoCreateTheAPIReference.md
     - name: How to Manage 'Using' Statements
       href: Contributing/HowToManageUsingStatements.md
+    - name: Kill Switches
+      href: Contributing/Build System/KillSwitches.md
     - name: Krypton RTL Audit Summary
       href: Contributing/Auditing/KryptonRTLAuditSummary.md
     - name: Krypton Toolkit Audit
