--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -124,6 +124,36 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/Current/BuildWorkflow.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/Current/BuildWorkflow.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/Current/ReleaseWorkflow.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/Current/ReleaseWorkflow.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/DependabotConfiguration.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/DependabotConfiguration.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Contributing/Build System/DirectoryBuildConfiguration.md",
       "output": {
         ".html": {
@@ -138,6 +168,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Contributing/Build System/GitHubActionsWorkflows.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/KillSwitches.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/KillSwitches.html"
         }
       },
       "version": ""
@@ -214,6 +254,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/BuildWorkflowIndex.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/BuildWorkflowIndex.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Contributing/ContributingGuidelines.md",
       "output": {
         ".html": {
@@ -254,40 +304,40 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/HowToBuild.md",
+      "source_relative_path": "articles/Contributing/HowtoBuild.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Contributing/HowToBuild.html"
+          "relative_path": "articles/Contributing/HowtoBuild.html"
         }
       },
       "version": ""
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/HowToManageUsingStatements.md",
+      "source_relative_path": "articles/Contributing/HowtoCreateaPullRequest.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Contributing/HowToManageUsingStatements.html"
+          "relative_path": "articles/Contributing/HowtoCreateaPullRequest.html"
         }
       },
       "version": ""
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/HowtoCreateAPullRequest.md",
+      "source_relative_path": "articles/Contributing/HowtoCreatetheAPIReference.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Contributing/HowtoCreateAPullRequest.html"
+          "relative_path": "articles/Contributing/HowtoCreatetheAPIReference.html"
         }
       },
       "version": ""
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/HowtoCreateTheAPIReference.md",
+      "source_relative_path": "articles/Contributing/HowtoManageUsingStatements.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Contributing/HowtoCreateTheAPIReference.html"
+          "relative_path": "articles/Contributing/HowtoManageUsingStatements.html"
         }
       },
       "version": ""
