* Update auditing documents
* Update auditing documents to include `KryptonToolStripContainer`
* `KryptonToolStripContainer` documentation

--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -153,6 +153,8 @@
               href: Standard Toolkit/Toolkit/Controls/KryptonToggleSwitch.md
             - name: KryptonToolStrip
               href: Standard Toolkit/Toolkit/Controls/KryptonToolStrip.md
+            - name: KryptonToolStripContainer
+              href: Standard Toolkit/Toolkit/Controls/KryptonToolStripContainer.md
             - name: KryptonTrackBar
               href: Standard Toolkit/Toolkit/Controls/KryptonTrackBar.md
             - name: KryptonTreeView
