--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4434,6 +4434,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonToolStripContainer.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonToolStripContainer.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonTrackBar.md",
       "output": {
         ".html": {
