--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -103,6 +103,8 @@
               href: Standard Toolkit/Toolkit/Controls/KryptonHeader.md
             - name: KryptonHeaderGroup
               href: Standard Toolkit/Toolkit/Controls/KryptonHeaderGroup.md
+            - name: KryptonGroupBox
+              href: Standard Toolkit/Toolkit/Controls/KryptonGroupBox.md
             - name: KryptonLabel
               href: Standard Toolkit/Toolkit/Controls/KryptonLabel.md
             - name: KryptonLinkLabel
