--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4154,6 +4154,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonGroupBox.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonGroupBox.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonHeader.md",
       "output": {
         ".html": {
@@ -5344,10 +5354,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "articles/Standard Toolkit/Toolkit/Images/KryptonGroupBox1.png",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Images/KryptonGroupBox.png",
       "output": {
         "resource": {
-          "relative_path": "articles/Standard Toolkit/Toolkit/Images/KryptonGroupBox1.png"
+          "relative_path": "articles/Standard Toolkit/Toolkit/Images/KryptonGroupBox.png"
         }
       },
       "version": ""
@@ -10661,306 +10671,6 @@
         },
         ".json": {
           "relative_path": "articles/toc.json"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic40.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic40.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic5.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic5.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic66.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic66.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic67.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic67.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic68.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic68.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic69.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic69.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic70.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic70.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic71.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic71.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic72.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic72.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic73.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic73.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic74.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic74.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic75.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic75.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic76.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic76.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic77.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic77.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic78.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic78.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic79.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic79.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic8.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic8.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic80.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic80.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic81.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic81.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic82.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic82.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic83.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic83.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic84.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic84.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic85.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic85.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic86.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic86.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic87.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic87.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic88.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic88.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic89.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic89.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic91.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic91.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic92.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic92.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/topic93.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/topic93.html"
         }
       },
       "version": ""
