--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -56,6 +56,8 @@
               href: Standard Toolkit/Toolkit/Components/KryptonIntegratedToolBarManager.md
             - name: KryptonManager
               href: Standard Toolkit/Toolkit/Components/KryptonManager.md
+            - name: KryptonMenuStrip
+              href: Standard Toolkit/Toolkit/Components/KryptonMenuStrip.md
             - name: KryptonMessageBox
               href: Standard Toolkit/Toolkit/Components/KryptonMessageBox.md
             - name: KryptonOpenFileDialog
@@ -350,6 +352,8 @@
       href: Contributing/EnablePreviewSDK.md
     - name: GitHub Actions Workflows
       href: Contributing/GitHubActionsIndex.md
+    - name: GitHubWorkflowIndex
+      href: Contributing/GitHubWorkflowIndex.md
     - name: How to Build the Standard Toolkit
       href: Contributing/HowToBuild.md
     - name: How to Create a Pull Request
