--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -139,6 +139,8 @@
               href: Standard Toolkit/Toolkit/Controls/KryptonRichTextBox.md
             - name: KryptonScrollBar
               href: Standard Toolkit/Toolkit/Controls/KryptonScrollBar.md
+            - name: KryptonSearchBox
+              href: Standard Toolkit/Toolkit/Controls/KryptonSearchBox.md
             - name: KryptonSeparator
               href: Standard Toolkit/Toolkit/Controls/KryptonSeparator.md
             - name: KryptonSplitContainer
