--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4394,6 +4394,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonSearchBox.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonSearchBox.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonSeparator.md",
       "output": {
         ".html": {
