--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -199,7 +199,7 @@
             - name: Krypton File System Tree View
               href: Standard Toolkit/Utilities/KryptonFileSystemTreeView.md
             - name: Krypton System Tree View
-              href
+              href: Standard Toolkit/Utilities/KryptonSystemTreeView.md
             - name: Icon Extraction
               href: Standard Toolkit/Toolkit/Utilities/IconExtractionIndex.md
             - name: Localization
