* Ribbon enhancement documentation
* Ribbon enhancement documentation

--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -225,6 +225,11 @@
           href: Standard Toolkit/Ribbon/ItemEvents.md
         - name: KryptonGallery
           href: Standard Toolkit/Ribbon/KryptonGallery.md
+        - name: Utilities
+          href: Standard Toolkit/Ribbon/Utilities.md
+          items:
+            - name: Krypton Ribbon Utilities
+              href: Standard Toolkit/Ribbon/Utilities/KryptonRibbonUtilities.md
     - name: Navigator
       href: Standard Toolkit/KryptonNavigator.md
       items:
