* Added `KryptonErrorProvider` documentation
* Added `KryptonErrorProvider` documentation

--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -44,6 +44,8 @@
               href: Standard Toolkit/Toolkit/Components/KryptonCustomPaletteBase.md
             - name: KryptonColorDialog
               href: Standard Toolkit/Toolkit/Components/KryptonColorDialog.md
+            - name: Krypton Error Provider
+              href: Standard Toolkit/Toolkit/Components/KryptonErrorProvider.md
             - name: KryptonExceptionHandler
               href: Standard Toolkit/Toolkit/Components/ExceptionHandling.md
             - name: KryptonFolderBrowserDialog
