--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3984,6 +3984,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Components/TouchscreenSupport.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Components/TouchscreenSupport.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls.md",
       "output": {
         ".html": {
