--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -46,10 +46,14 @@
               href: Standard Toolkit/Toolkit/Components/KryptonColorDialog.md
             - name: KryptonExceptionHandler
               href: Standard Toolkit/Toolkit/Components/ExceptionHandling.md
+            - name: KryptonFileSystemWatcher
+              href: Standard Toolkit/Toolkit/Components/KryptonFileSystemWatcher.md
             - name: KryptonFolderBrowserDialog
               href: Standard Toolkit/Toolkit/Components/KryptonFolderBrowserDialog.md
             - name: KryptonFontDialog
               href: Standard Toolkit/Toolkit/Components/KryptonFontDialog.md
+            - name: KryptonHelpProvider
+              href: Standard Toolkit/Toolkit/Components/KryptonHelpProvider.md
             - name: KryptonInputBox
               href: Standard Toolkit/Toolkit/Components/KryptonInputBox.md
             - name: KryptonIntegratedToolBarManager
@@ -63,6 +67,8 @@
               href: Standard Toolkit/Toolkit/Components/KryptonMenuStrip.md
             - name: KryptonMessageBox
               href: Standard Toolkit/Toolkit/Components/KryptonMessageBox.md
+            - name: KryptonNotifyIcon
+              href: Standard Toolkit/Toolkit/Components/KryptonNotifyIcon.md
             - name: KryptonOpenFileDialog
               href: Standard Toolkit/Toolkit/Components/KryptonOpenFileDialog.md
             - name: KryptonPrintDialog
@@ -73,11 +79,15 @@
               href: Standard Toolkit/Toolkit/Components/KryptonTaskDialog.md
             - name: KryptonThemeBrowser
               href: Standard Toolkit/Toolkit/Components/KryptonThemeBrowser.md
+            - name: KryptonTimer
+              href: Standard Toolkit/Toolkit/Components/KryptonTimer.md
             - name: KryptonToastNotification
               href: Standard Toolkit/Toolkit/Components/KryptonToastNotification.md
         - name: Controls
           href: Standard Toolkit/Toolkit/Controls.md
           items:
+            - name: KryptonBindingNavigator
+              href: Standard Toolkit/Toolkit/Controls/KryptonBindingNavigator.md
             - name: KryptonBorderEdge
               href: Standard Toolkit/Toolkit/Controls/KryptonBorderEdge.md
             - name: KryptonBreadCrumb
@@ -205,6 +215,8 @@
       items:
         - name: Overview
           href: Standard Toolkit/Ribbon/Krypton Ribbon Overview.md
+        - name: Back Stage View
+          href: Standard Toolkit/Ribbon/Components/BackStage View/KryptonRibbonBackstageView.md
         - name: Tabs
           href: Standard Toolkit/Ribbon/KryptonRibbonTabs.md
         - name: Groups
@@ -229,6 +241,8 @@
           href: Standard Toolkit/Ribbon/ItemEvents.md
         - name: KryptonGallery
           href: Standard Toolkit/Ribbon/KryptonGallery.md
+        - name: Notification Bar
+          href: Standard Toolkit/Ribbon/KryptonRibbonNotificationBar.md
     - name: Navigator
       href: Standard Toolkit/KryptonNavigator.md
       items:
