--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -32,157 +32,159 @@
         - name: Components
           href: Standard Toolkit/Toolkit/Components.md
           items:
-            - name: KryptonAboutBox
+            - name: Krypton About Box
               href: Standard Toolkit/Toolkit/Components/KryptonAboutBox.md
-            - name: KryptonCheckSet
+            - name: Krypton Check Set
               href: Standard Toolkit/Toolkit/Components/KryptonCheckSet.md
-            - name: KryptonCommand
+            - name: Krypton Command
               href: Standard Toolkit/Toolkit/Components/KryptonCommand.md
-            - name: KryptonContextMenu
+            - name: Krypton Context Menu
               href: Standard Toolkit/Toolkit/Components/KryptonContextMenu.md
-            - name: KryptonCustomPaletteBase
+            - name: Krypton Custom Palette Base
               href: Standard Toolkit/Toolkit/Components/KryptonCustomPaletteBase.md
-            - name: KryptonColorDialog
+            - name: Krypton Color Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonColorDialog.md
             - name: Krypton Error Provider
               href: Standard Toolkit/Toolkit/Components/KryptonErrorProvider.md
-            - name: KryptonExceptionHandler
+            - name: Krypton Exception Handler
               href: Standard Toolkit/Toolkit/Components/ExceptionHandling.md
-            - name: KryptonFileSystemWatcher
+            - name: Krypton File System Watcher
               href: Standard Toolkit/Toolkit/Components/KryptonFileSystemWatcher.md
-            - name: KryptonFolderBrowserDialog
+            - name: Krypton Folder Browser Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonFolderBrowserDialog.md
-            - name: KryptonFontDialog
+            - name: Krypton Font Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonFontDialog.md
-            - name: KryptonHelpProvider
+            - name: Krypton Help Provider
               href: Standard Toolkit/Toolkit/Components/KryptonHelpProvider.md
-            - name: KryptonInputBox
+            - name: Krypton Input Box
               href: Standard Toolkit/Toolkit/Components/KryptonInputBox.md
-            - name: KryptonIntegratedToolBarManager
+            - name: Krypton Integrated Tool Bar Manager
               href: Standard Toolkit/Toolkit/Components/KryptonIntegratedToolBarManager.md
-            - name: KryptonManager
+            - name: Krypton Manager
               href: Standard Toolkit/Toolkit/Components/KryptonManager.md
               items:
                 - name: Touchscreen Support
                   href: Standard Toolkit/Toolkit/Components/TouchscreenSupport.md
-            - name: KryptonMenuStrip
-              href: Standard Toolkit/Toolkit/Components/KryptonMenuStrip.md
-            - name: KryptonMessageBox
+            - name: Krypton Message Box
               href: Standard Toolkit/Toolkit/Components/KryptonMessageBox.md
-            - name: KryptonNotifyIcon
+            - name: Krypton Notify Icon
               href: Standard Toolkit/Toolkit/Components/KryptonNotifyIcon.md
-            - name: KryptonOpenFileDialog
+            - name: Krypton Open File Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonOpenFileDialog.md
-            - name: KryptonPrintDialog
+            - name: Krypton Print Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonPrintDialog.md
-            - name: KryptonSaveFileDialog
+            - name: Krypton Save File Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonSaveFileDialog.md
-            - name: KryptonTaskDialog
+            - name: Krypton Task Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonTaskDialog.md
-            - name: KryptonThemeBrowser
+            - name: Krypton Theme Browser
               href: Standard Toolkit/Toolkit/Components/KryptonThemeBrowser.md
-            - name: KryptonTimer
+            - name: Krypton Timer
               href: Standard Toolkit/Toolkit/Components/KryptonTimer.md
-            - name: KryptonToastNotification
+            - name: Krypton Toast Notification
               href: Standard Toolkit/Toolkit/Components/KryptonToastNotification.md
         - name: Controls
           href: Standard Toolkit/Toolkit/Controls.md
           items:
-            - name: KryptonBindingNavigator
+            - name: Krypton Binding Navigator
               href: Standard Toolkit/Toolkit/Controls/KryptonBindingNavigator.md
-            - name: KryptonBorderEdge
+            - name: Krypton Border Edge
               href: Standard Toolkit/Toolkit/Controls/KryptonBorderEdge.md
-            - name: KryptonBreadCrumb
+            - name: Krypton Bread Crumb
               href: Standard Toolkit/Toolkit/Controls/KryptonBreadCrumb.md
-            - name: KryptonButton
+            - name: Krypton Button
               href: Standard Toolkit/Toolkit/Controls/KryptonButton.md
-            - name: KryptonCheckBox
+            - name: Krypton Check Box
               href: Standard Toolkit/Toolkit/Controls/KryptonCheckBox.md
-            - name: KryptonCheckButton
+            - name: Krypton Check Button
               href: Standard Toolkit/Toolkit/Controls/KryptonCheckButton.md
-            - name: KryptonCheckedListBox
+            - name: Krypton Checked List Box
               href: Standard Toolkit/Toolkit/Controls/KryptonCheckedListBox.md
-            - name: KryptonColorButton
+            - name: Krypton Color Button
               href: Standard Toolkit/Toolkit/Controls/KryptonColorButton.md
-            - name: KryptonComboBox
+            - name: Krypton Combo Box
               href: Standard Toolkit/Toolkit/Controls/KryptonComboBox.md
-            - name: KryptonCommandLinkButton
+            - name: Krypton Command Link Button
               href: Standard Toolkit/Toolkit/Controls/KryptonCommandLinkButton.md
-            - name: KryptonDataGridView
+            - name: Krypton Data Grid View
               href: Standard Toolkit/Toolkit/Controls/KryptonDataGridView.md
-            - name: KryptonDateTimePicker
+            - name: Krypton Date Time Picker
               href: Standard Toolkit/Toolkit/Controls/KryptonDateTimePicker.md
-            - name: KryptonDomainUpDown
+            - name: Krypton Domain Up Down
               href: Standard Toolkit/Toolkit/Controls/KryptonDomainUpDown.md
-            - name: KryptonGroup
+            - name: Krypton Group
               href: Standard Toolkit/Toolkit/Controls/KryptonGroup.md
-            - name: KryptonHeader
+            - name: Krypton Header
               href: Standard Toolkit/Toolkit/Controls/KryptonHeader.md
-            - name: KryptonHeaderGroup
+            - name: Krypton Header Group
               href: Standard Toolkit/Toolkit/Controls/KryptonHeaderGroup.md
-            - name: KryptonGroupBox
+            - name: Krypton Group Box
               href: Standard Toolkit/Toolkit/Controls/KryptonGroupBox.md
-            - name: KryptonLabel
+            - name: Krypton Label
               href: Standard Toolkit/Toolkit/Controls/KryptonLabel.md
-            - name: KryptonLinkLabel
+            - name: Krypton Link Label
               href: Standard Toolkit/Toolkit/Controls/KryptonLinkLabel.md
-            - name: KryptonLinkWrapLabel
+            - name: Krypton Link Wrap Label
               href: Standard Toolkit/Toolkit/Controls/KryptonLinkWrapLabel.md
-            - name: KryptonListBox
+            - name: Krypton List Box
               href: Standard Toolkit/Toolkit/Controls/KryptonListBox.md
-            - name: KryptonListView
+            - name: Krypton List View
               href: Standard Toolkit/Toolkit/Controls/KryptonListView.md
-            - name: KryptonMaskedTextBox
+            - name: Krypton Masked Text Box
               href: Standard Toolkit/Toolkit/Controls/KryptonMaskedTextBox.md
-            - name: KryptonMonthCalendar
+            - name: Krypton Menu Strip
+              href: Standard Toolkit/Toolkit/Controls/KryptonMenuStrip.md
+            - name: Krypton Month Calendar
               href: Standard Toolkit/Toolkit/Controls/KryptonMonthCalendar.md
-            - name: KryptonNumericUpDown
+            - name: Krypton Numeric Up Down
               href: Standard Toolkit/Toolkit/Controls/KryptonNumericUpDown.md
-            - name: KryptonPanel
+            - name: Krypton Panel
               href: Standard Toolkit/Toolkit/Controls/KryptonPanel.md
-            - name: KryptonPictureBox
+            - name: Krypton Picture Box
               href: Standard Toolkit/Toolkit/Controls/KryptonPictureBox.md
-            - name: KryptonProgressBar
+            - name: Krypton Progress Bar
               href: Standard Toolkit/Toolkit/Controls/KryptonProgressBar.md
-            - name: KryptonPoweredByButton
+            - name: Krypton Powered By Button
               href: Standard Toolkit/Toolkit/Controls/KryptonPoweredByButton.md
-            - name: KryptonPropertyGrid
+            - name: Krypton Property Grid
               href: Standard Toolkit/Toolkit/Controls/KryptonPropertyGrid.md
-            - name: KryptonRadioButton
+            - name: Krypton Radio Button
               href: Standard Toolkit/Toolkit/Controls/KryptonRadioButton.md
-            - name: KryptonRichTextBox
+            - name: Krypton Rich Text Box
               href: Standard Toolkit/Toolkit/Controls/KryptonRichTextBox.md
-            - name: KryptonScrollBar
+            - name: Krypton Scroll Bar
               href: Standard Toolkit/Toolkit/Controls/KryptonScrollBar.md
-            - name: KryptonSearchBox
+            - name: Krypton Search Box
               href: Standard Toolkit/Toolkit/Controls/KryptonSearchBox.md
-            - name: KryptonSeparator
+            - name: Krypton Separator
               href: Standard Toolkit/Toolkit/Controls/KryptonSeparator.md
-            - name: KryptonSplitContainer
+            - name: Krypton Split Container
               href: Standard Toolkit/Toolkit/Controls/KryptonSplitContainer.md
-            - name: KryptonStatusStrip
+            - name: Krypton Splitter
+              href: Standard Toolkit/Toolkit/Controls/KryptonSplitter.md
+            - name: Krypton Status Strip
               href: Standard Toolkit/Toolkit/Controls/KryptonStatusStrip.md
-            - name: KryptonTableLayoutPanel
+            - name: Krypton Table Layout Panel
               href: Standard Toolkit/Toolkit/Controls/KryptonTableLayoutPanel.md
-            - name: KryptonTextBox
+            - name: Krypton Text Box
               href: Standard Toolkit/Toolkit/Controls/KryptonTextBox.md
-            - name: KryptonThemeComboBox
+            - name: Krypton Theme Combo Box
               href: Standard Toolkit/Toolkit/Controls/KryptonThemeComboBox.md
-            - name: KryptonThemeListBox
+            - name: Krypton Theme List Box
               href: Standard Toolkit/Toolkit/Controls/KryptonThemeListBox.md
-            - name: KryptonToggleSwitch
+            - name: Krypton Toggle Switch
               href: Standard Toolkit/Toolkit/Controls/KryptonToggleSwitch.md
-            - name: KryptonToolStrip
+            - name: Krypton Tool Strip
               href: Standard Toolkit/Toolkit/Controls/KryptonToolStrip.md
-            - name: KryptonToolStripContainer
+            - name: Krypton Tool Strip Container
               href: Standard Toolkit/Toolkit/Controls/KryptonToolStripContainer.md
-            - name: KryptonTrackBar
+            - name: Krypton Track Bar
               href: Standard Toolkit/Toolkit/Controls/KryptonTrackBar.md
-            - name: KryptonTreeView
+            - name: Krypton Tree View
               href: Standard Toolkit/Toolkit/Controls/KryptonTreeView.md
-            - name: KryptonWebBrowser
+            - name: Krypton Web Browser
               href: Standard Toolkit/Toolkit/Controls/KryptonWebBrowser.md
-            - name: KryptonWrapLabel
+            - name: Krypton Wrap Label
               href: Standard Toolkit/Toolkit/Controls/KryptonWrapLabel.md
         - name: Forms
           href: Standard Toolkit/Toolkit/Forms.md
@@ -265,15 +267,15 @@
       items:
       - name: Overview
         href: Standard Toolkit/Navigator/NavigatorOverview.md
-      - name: KryptonPage
+      - name: Krypton Page
         href: Standard Toolkit/Navigator/NavigatorKryptonPage.md
       - name: Modes
         href: Standard Toolkit/Navigator/NavigatorModes.md
-      - name: PageDragging
+      - name: Page Dragging
         href: Standard Toolkit/Navigator/NavigatorPageDragging.md
-      - name: PopupPages
+      - name: Popup Pages
         href: Standard Toolkit/Navigator/NavigatorPopupPages.md
-      - name: ToolTips
+      - name: Tool Tips
         href: Standard Toolkit/Navigator/NavigatorToolTips.md
       - name: Other Properties
         href: Standard Toolkit/Navigator/NavigatorOtherProperties.md
@@ -340,7 +342,7 @@
       items:
       - name: Overview
         href: Standard Toolkit/Page Dragging/PageDraggingOverview.md
-      - name: DragManager
+      - name: Drag Manager
         href: Standard Toolkit/Page Dragging/DragManager.md
       - name: Drag Enabling Controls
         href: Standard Toolkit/Page Dragging/DragEnablingControls.md
@@ -389,7 +391,7 @@
       href: Contributing/EnablePreviewSDK.md
     - name: GitHub Actions Workflows
       href: Contributing/GitHubActionsIndex.md
-    - name: GitHubWorkflowIndex
+    - name: GitHub Workflows
       href: Contributing/GitHubWorkflowIndex.md
     - name: How to Build the Standard Toolkit
       href: Contributing/HowToBuild.md
